<resources>
    <string name="app_name">finalProject</string>
    <string name="activityTrackerButtonText">Activity Tracking</string>
    <string name="nutritionTrackerButtonText">Food Nutrition information tracker</string>
    <string name="houseThermostatButtonText">House Thermostat</string>
    <string name="automobileButtonText">Automobile</string>
    <string name="startTrackingButton">Start Tracking your Exercises</string>
    <string name="welcome_text">Welcome to Activity Tracker</string>
    <string name="selectTextView">Choose exercise</string>
    <string name="runningTextView">Running</string>
    <string name="walkingTextView">Walking</string>
    <string name="swimmingTextView">Swimming</string>
    <string name="bikingTextView">Biking</string>
    <string name="skatingTextView">Skating</string>
    <string name="durationTextView">Duration</string>
    <string name="commentsTextView">Comments</string>
    <string name="commentsEditText">How was your exercise?</string>
    <string name="progressTextView">Progress</string>
    <string name="addActivityButton">Add Activity</string>
</resources>
