<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sahar.finalproject.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/activityTrackerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activityTrackerButtonText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/nutritionTrackerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutritionTrackerButtonText" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/houseThermostatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/houseThermostatButtonText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/automobileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automobileButtonText" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
